--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Austen Madden
+footer_title: Contact Info
+greeting: Welcome!
+email: maddenausten@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm a software developer from Columbus, Ohio interested in just a bit of
+  everything.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://austenmadden.me" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: aus10madden
+github_username:  austenmadden
+linkedin_username: austenmadden
+disqus:
+    shortname: austenmadden-me
 
 # Build settings
 markdown: kramdown
